@@ -37,10 +37,11 @@ if (isset($submittype)) {
     $result        = PMA_DBI_query($sql_query);
     $message       = $strSuccess;
 }
-if (isset($submitcharset)) {
-    $sql_query     = 'ALTER TABLE ' . PMA_backquote($table) . ' DEFAULT CHARACTER SET = ' . $tbl_charset;
+if (isset($submitcollation)) {
+    $sql_query     = 'ALTER TABLE ' . PMA_backquote($table) . ' DEFAULT' . PMA_generateCharsetQueryPart($tbl_collation);
     $result        = PMA_DBI_query($sql_query);
     $message       = $strSuccess;
+    unset($tbl_collation);
 }
 if (isset($submitoptions)) {
     $sql_query     = 'ALTER TABLE ' . PMA_backquote($table)
@@ -451,16 +452,9 @@ if ($cfgRelation['relwork'] && $tbl_type != "INNODB") {
            . '    <li>' . "\n"
            . '        <form method="post" action="tbl_properties_operations.php">' . "\n"
            . PMA_generate_common_hidden_inputs($db, $table, 3)
-           . '            ' . $strCharset . '&nbsp;:&nbsp;' . "\n"
-           . '            <select name="tbl_charset" style="vertical-align: middle">' . "\n";
-           $real_charset = strpos($tbl_charset, '_') ? substr($tbl_charset, 0, strpos($tbl_charset, '_')) : $tbl_charset;
-        for ($i = 1; isset($mysql_charsets[$i]); $i++) {
-            echo '                <option value="' . $mysql_charsets[$i] . '"' . ($mysql_charsets[$i] == $real_charset ? ' selected="selected"' : '') . '>' . $mysql_charsets[$i] . '</option>' . "\n";
-        }
-        unset($i);
-        unset($real_charset);
-        echo '            </select>&nbsp;' . "\n"
-           . '            <input type="submit" name="submitcharset" value="' . $strGo . '" style="vertical-align: middle" />&nbsp;' . "\n"
+           . '            ' . $strCollation . '&nbsp;:&nbsp;' . "\n"
+           . PMA_generateCharsetDropdownBox(PMA_CSDROPDOWN_COLLATION, 'tbl_collation', NULL, $tbl_collation, FALSE, 3)
+           . '            <input type="submit" name="submitcollation" value="' . $strGo . '" style="vertical-align: middle" />&nbsp;' . "\n"
            . '        </form>' . "\n"
            . '    </li>' . "\n";
     }
