@@ -18,7 +18,7 @@ PMA_checkParameters(array('db', 'table'));
 $table_info_result   = PMA_DBI_query('SHOW TABLE STATUS LIKE \'' . PMA_sqlAddslashes($table, TRUE) . '\';');
 $showtable           = PMA_DBI_fetch_assoc($table_info_result);
 $tbl_type            = strtoupper($showtable['Type']);
-$tbl_charset         = empty($showtable['Collation']) ? '' : $showtable['Collation'];
+$tbl_collation       = empty($showtable['Collation']) ? '' : $showtable['Collation'];
 $table_info_num_rows = (isset($showtable['Rows']) ? $showtable['Rows'] : 0);
 $show_comment        = (isset($showtable['Comment']) ? $showtable['Comment'] : '');
 $auto_increment      = (isset($showtable['Auto_increment']) ? $showtable['Auto_increment'] : '');
