@@ -7,8 +7,10 @@ $Source$
 
 2004-04-17 Alexander M. Turek  <me@derrabus.de>
     * db_create.php, db_details_structure.php, db_details_common.php, main.php,
-      libraries/mysql_charsets.lib.php:
-      Added ability to set / alter collations on database level.
+      tbl_alter.php, tbl_create.php, tbl_properties.inc.php,
+      tbl_properties_operations.php, tbl_properties_structure.php,
+      tbl_properties_table_info.php, libraries/mysql_charsets.lib.php:
+      Added ability to set / alter collations for databases, tables and fields.
     * tbl_alter.php: Charset information got lost when changing fields.
 
 2004-04-16 Marc Delisle  <lem9@users.sourceforge.net>
